--- a/views/website/edit.1.pug
+++ b/views/website/edit.1.pug
@@ -63,7 +63,7 @@ block content
                 option(value="true") True
         
         div.form-group
-            label(for="status") Status
+            label(for="status") Needs End Slash
             select#status(name="status", class="form-control")
                 option(value="INACTIVE") INACTIVE
                 option(value="ACTIVE") ACTIVE
@@ -73,36 +73,31 @@ block content
 
         legend Scraper Information (VERY IMPORTANT)
 
-        //- div.form-group
-        //-     label(for="scraper_setting") Scraper Setting
-        //-     select#scraper_setting(name="scraper_setting", class="form-control")
-        //-         option(value="REGEX_CONFIG") REGEX_CONFIG
-        //-         option(value="SECTION_CONFIG") SECTION_CONFIG
-        //-         option(value="BOTH_CONFIG") BOTH_CONFIG
-
         div.form-group
-            label(for="has_subsection") Has Subsections
-            select#has_subsection(name="has_subsection", class="form-control")
-                option(value="false") False
-                option(value="true") True
+            label(for="scraper_setting") Scraper Setting
+            select#scraper_setting(name="scraper_setting", class="form-control")
+                option(value="REGEX_CONFIG") REGEX_CONFIG
+                option(value="SECTION_CONFIG") SECTION_CONFIG
+                option(value="BOTH_CONFIG") BOTH_CONFIG
+
         
-        //- div.form-group
-        //-     label(for="regex_config") Regex Config
-        //-     .form-group
-        //-         label(for="regex_config_starts") Skip url starts with
-        //-         textarea#regex_config_starts.form-control(name="regex_config_starts", cols="30", rows="5")=data.regex_config.startsWith
-        //-     .form-group
-        //-         label(for="regex_config_ends") Skip url ends with
-        //-         textarea#regex_config_ends.form-control(name="regex_config_ends", cols="30", rows="5")=data.regex_config.endsWith
-        //-     .form-group
-        //-         label(for="regex_config_contains") Skip url contains with
-        //-         textarea#regex_config_contains.form-control(name="regex_config_contains", cols="30", rows="5")=data.regex_config.containsWith
-        //-     .form-group
-        //-         label(for="regex_config_exact") Skip exact url
-        //-         textarea#regex_config_exact.form-control(name="regex_config_exact", cols="30", rows="5")=data.regex_config.exact
-        //-     .form-group
-        //-         label(for="regex_config_accept") Accept Only
-        //-         textarea#regex_config_accept.form-control(name="regex_config_accept", cols="30", rows="5")=data.regex_config.accept
+        div.form-group
+            label(for="regex_config") Regex Config
+            .form-group
+                label(for="regex_config_starts") Skip url starts with
+                textarea#regex_config_starts.form-control(name="regex_config_starts", cols="30", rows="5")=data.regex_config.startsWith
+            .form-group
+                label(for="regex_config_ends") Skip url ends with
+                textarea#regex_config_ends.form-control(name="regex_config_ends", cols="30", rows="5")=data.regex_config.endsWith
+            .form-group
+                label(for="regex_config_contains") Skip url contains with
+                textarea#regex_config_contains.form-control(name="regex_config_contains", cols="30", rows="5")=data.regex_config.containsWith
+            .form-group
+                label(for="regex_config_exact") Skip exact url
+                textarea#regex_config_exact.form-control(name="regex_config_exact", cols="30", rows="5")=data.regex_config.exact
+            .form-group
+                label(for="regex_config_accept") Accept Only
+                textarea#regex_config_accept.form-control(name="regex_config_accept", cols="30", rows="5")=data.regex_config.accept
 
         div.form-group
             label(for="section_config") Section Config
@@ -120,13 +115,7 @@ block content
                 textarea#section_config_exact.form-control(name="section_config_exact", cols="30", rows="5")=data.section_config.exact
             .form-group
                 label(for="section_config_accept") Accept Only
-                textarea#section_config_accept.form-control(name="section_config_accept", cols="30", rows="5")=data.section_config.accept_only
-            .form-group
-                label(for="section_regex_include") Regex Include Only
-                textarea#section_regex_include.form-control(name="section_regex_include", cols="30", rows="5")=data.section_config.regex_include
-            .form-group
-                label(for="section_regex_exclude") Regex Exclude Only
-                textarea#section_regex_exclude.form-control(name="section_regex_exclude", cols="30", rows="5")=data.section_config.regex_exclude
+                textarea#section_config_accept.form-control(name="section_config_accept", cols="30", rows="5")=data.section_config.accept
         
         div.form-group
             label(for="main_sections") Main Sections
@@ -163,52 +152,46 @@ block js
             var country = $('#country').val() || null
             var needs_endslash = $('#needs_endslash').val()
             var status = $('#status').val()
-            var has_subsection = $('#has_subsection').val()
-            //- var regex_config = {
-            //-     'startsWith' : checkForempty(S($('#regex_config_starts').val()).splitLeft(',')).map(function(v){
-            //-     return S(v).trim().s
-            //- }),
-            //-     'endsWith' : checkForempty(S($('#regex_config_ends').val()).splitLeft(',')).map(function(v){
-            //-     return S(v).trim().s
-            //- }),
-            //-     'containsWith' : checkForempty(S($('#regex_config_contains').val()).splitLeft(',')).map(function(v){
-            //-     return S(v).trim().s
-            //- }),
-            //-      'exact' : checkForempty(S($('#regex_config_exact').val()).splitLeft(',')).map(function(v){
-            //-         return S(v).trim().s
-            //-     }),
-            //-     'accept' : checkForempty(S($('#regex_config_accept').val()).splitLeft(',')).map(function(v){
-            //-         return S(v).trim().s
-            //-     })
-            //- }
+            var scraper_setting = $('#scraper_setting').val()
+            var regex_config = {
+                'startsWith' : checkForempty(S($('#regex_config_starts').val()).splitLeft(',')).map(function(v){
+                return S(v).trim().s || null
+            }),
+                'endsWith' : checkForempty(S($('#regex_config_ends').val()).splitLeft(',')).map(function(v){
+                return S(v).trim().s || null
+            }),
+                'containsWith' : checkForempty(S($('#regex_config_contains').val()).splitLeft(',')).map(function(v){
+                return S(v).trim().s || null
+            }),
+                 'exact' : checkForempty(S($('#regex_config_exact').val()).splitLeft(',')).map(function(v){
+                    return S(v).trim().s || null
+                }),
+                'accept' : checkForempty(S($('#regex_config_accept').val()).splitLeft(',')).map(function(v){
+                    return S(v).trim().s || []
+                })
+            }
             var section_config = {
                 'startsWith' : checkForempty(S($('#section_config_starts').val()).splitLeft(',')).map(function(v){
-                return S(v).trim().s
+                return S(v).trim().s || null
             }),
                 'endsWith' : checkForempty(S($('#section_config_ends').val()).splitLeft(',')).map(function(v){
-                return S(v).trim().s
+                return S(v).trim().s || null
             }),
                 'containsWith' : checkForempty(S($('#section_config_contains').val()).splitLeft(',')).map(function(v){
-                return S(v).trim().s
+                return S(v).trim().s || null
             }),
                  'exact' : checkForempty(S($('#section_config_exact').val()).splitLeft(',')).map(function(v){
-                    return S(v).trim().s
+                    return S(v).trim().s || null
                 }),
-                'accept_only' : checkForempty(S($('#section_config_accept').val()).splitLeft(',')).map(function(v){
-                    return S(v).trim().s
-                }),
-                'regex_include' : checkForempty(S($('#section_regex_include').val()).splitLeft(',')).map(function(v){
-                    return S(v).trim().s
-                }),
-                'regex_exclude' : checkForempty(S($('#section_regex_exclude').val()).splitLeft(',')).map(function(v){
-                    return S(v).trim().s
+                'accept' : checkForempty(S($('#section_config_accept').val()).splitLeft(',')).map(function(v){
+                    return S(v).trim().s || null
                 })
             }
             var main_sections = checkForempty(S($('#main_sections').val()).splitLeft(',')).map(function(v){
-                return S(v).trim().s
+                return S(v).trim().s || null
             })
             var sub_sections = checkForempty(S($('#sub_sections').val()).splitLeft(',')).map(function(v){
-                return S(v).trim().s
+                return S(v).trim().s || null
             })
 
 
@@ -221,9 +204,8 @@ block js
                 jsonData.country = country
                 jsonData.needs_endslash = needs_endslash
                 jsonData.status = status
-                jsonData.has_subsection = has_subsection
-                //- jsonData.scraper_setting = scraper_setting
-                //- jsonData.regex_config = regex_config
+                jsonData.scraper_setting = scraper_setting
+                jsonData.regex_config = regex_config
                 jsonData.section_config = section_config
                 jsonData.main_sections = main_sections
                 jsonData.sub_sections = sub_sections
